fixing serch bar spacing

--- a/themes/digital.gov/src/uswds/scss/_tag-line.scss
+++ b/themes/digital.gov/src/uswds/scss/_tag-line.scss
@@ -9,7 +9,7 @@
 		@include u-text('center');
 		@include u-text('indigo-warm-80');
 		@include at-media('tablet') {
-			@include u-margin-top(4);
+			@include u-margin-top(2);
 			@include u-font('sans', '2xl');
 		}
 	}
